# ShapeCoder

./: README.md
code/: .gitignore  README.md  abstract.py  bb_rec_net.py  canon.py  data.py  dream.py  env.yml  extract.py  library.py  mask_info.py  mc_prog_search.py  op_ord.py  prm_expr_search.py  prm_sample_dist.py  prog_cost.py  prog_utils.py  proposal.py  rec_net.py  rewrites.py  shapecoder.py  utils.py  vis_res.py
code/egg/: .gitignore  Cargo.toml
code/egg/src/: lib.rs
s2d_lang/: .gitignore  executor.py  simp_chair_grammar.py
s3d_lang/: executor.py  partnet_grammar.py  vis.py
s3d_lang/prog_data/: PN_chair.txt  PN_storage.txt  PN_table.txt
